# window_window_manager

./: .clang-format  .gitignore  0001-post.patch  0001-split-start-window.patch  1.diff  11.txt  12449.diff  18025.diff  18567.patch  19074.diff  4.diff  9679.diff  AGENTS.md  CLAUDE.md  OAT.xml  README.md  README_zh.md  bundle.json  diff.txt  disable.patch  getTopWindow.patch  h --set-upstream origin branch-name  hisysevent.yaml  kitsnapiembeddable_window_stage  log.diff  ohos.build  patch  q  run_git_set_upstream.sh  scale.patch  scene_board_enable.gni  windowmanager_aafwk.gni  ！
adapter/: BUILD.gn
adapter/include/: adapter.h
dm/: BUILD.gn  libdm.map
dm/include/: display_manager_adapter.h  display_manager_agent.h  display_manager_agent_default.h
dm/src/: README.md  display.cpp  display_manager.cpp  display_manager_adapter.cpp  display_manager_agent.cpp  oh_display_manager.cpp  oh_display_manager_inner.h  screen.cpp  screen_group.cpp  screen_manager.cpp
dm/test/: BUILD.gn
dm_lite/: BUILD.gn  IDisplayManagerLite.idl
dm_lite/include/: display_manager_adapter_lite.h  display_manager_lite_proxy.h
dm_lite/src/: display_lite.cpp  display_manager_adapter_lite.cpp  display_manager_lite.cpp  display_manager_lite_proxy.cpp  display_manager_lite_proxy_idl.cpp  screen_manager_lite.cpp
dm_lite/test/: BUILD.gn
dmserver/: BUILD.gn  IDisplayManager.idl
dmserver/include/: abstract_display.h  abstract_display_controller.h  abstract_display_manager.h  abstract_screen.h  abstract_screen_controller.h  display_cutout_controller.h  display_dumper.h  display_manager_agent_controller.h  display_manager_config.h  display_manager_interface.h  display_manager_interface_code.h  display_manager_ipc_service.h  display_manager_proxy.h  display_manager_service.h  display_manager_service_inner.h  display_manager_stub.h  display_node_control.h  display_power_controller.h  display_screen.h  display_screen_manager.h  rs_adapter.h  screen.h  screen_rotation_controller.h  sensor_connector.h  sensor_plugin.h  virtual_display_info.h
dmserver/src/: README.md  abstract_display.cpp  abstract_display_controller.cpp  abstract_display_manager.cpp  abstract_screen.cpp  abstract_screen_controller.cpp  display_cutout_controller.cpp  display_dumper.cpp  display_manager_agent_controller.cpp  display_manager_config.cpp  display_manager_ipc_service.cpp  display_manager_proxy.cpp  display_manager_service.cpp  display_manager_service_inner.cpp  display_manager_stub.cpp  display_node_control.cpp  display_power_controller.cpp  display_screen_manager.cpp  rs_adapter.cpp  screen.cpp  screen_rotation_controller.cpp  sensor_connector.cpp  sensor_plugin.cpp
extension/extension_connection/: BUILD.gn
extension/window_extension/: BUILD.gn
previewer/: BUILD.gn
previewer/include/: display.h  dm_common.h  fold_screen_info.h  input_transfer_station.h  vsync_station.h  window.h  window_display.h  window_impl.h  window_input_channel.h  window_model.h  window_option.h  window_scene.h  wm_animation_common.h  wm_common.h  wm_type.h
previewer/mock/: ability_context.h  ability_info.h  access_token.h  accesstoken_kit.cpp  accesstoken_kit.h  bundle_constants.h  context.h  ipc_skeleton.cpp  ipc_skeleton.h  iremote_object.cpp  js_err_utils.h  js_transition_controller.cpp  js_transition_controller.h  js_window.cpp  js_window_listener.cpp  js_window_listener.h  js_window_register_manager.cpp  js_window_register_manager.h  key_event.h  napi_common_want.h  napi_remote_object.cpp  napi_remote_object.h  parcel.h  permission.cpp  permission.h  pixel_map.h  pixel_map_napi.cpp  pixel_map_napi.h  pointer_event.h  request_info.h  tokenid_kit.h  ui_content.h  ui_window.h  vsync_receiver.h  want_params.h  window_helper.h  window_info.h  window_manager.cpp  window_manager.h  window_manager_hilog.h
previewer/src/: input_transfer_station.cpp  parcel.cpp  parcel.h  vsync_station.cpp  window.cpp  window.h  window_display.cpp  window_impl.cpp  window_input_channel.cpp  window_model.cpp  window_option.cpp  window_scene.cpp  window_scene.h
previewer/window_stage_modules/: BUILD.gn
product/: BUILD.gn
product/pc/: BUILD.gn
product/phone/: BUILD.gn
product/tablet/: BUILD.gn
resources/config/: BUILD.gn  windowmanager_resources.gni
setresolution/: BUILD.gn
setresolution/include/: setresolution_utils.h
setresolution/src/: setresolution_screen.cpp  setresolution_utils.cpp
snapshot/: BUILD.gn  snapshot_display.cpp  snapshot_utils.cpp  snapshot_utils.h  snapshot_virtual_screen.cpp
snapshot/include/: snapshot_utils.h
snapshot/src/: snapshot_display.cpp  snapshot_utils.cpp  snapshot_virtual_screen.cpp
test/demo/: BUILD.gn  demo_freeze_display.cpp  demo_mirror_screen_listener.cpp  demo_outline_virtual_media_service.cpp  demo_screenshot_listener.cpp  demo_session_manager.cpp  demo_snapshot_virtual_screen.cpp  demo_system_sub_window.cpp  demo_visible_window_num_listener.cpp  demo_water_mark_listener.cpp
tools/wmdebug/: BUILD.gn
utils/: BUILD.gn  libwmutil.map
utils/include/: agent_death_recipient.h  atomic_map.h  class_var_defination.h  class_var_definition.h  client_agent_container.h  collaborator_dll_manager.h  color_parser.h  cutout_info.h  display_change_info.h  display_change_listener.h  display_histogram_management.h  display_info.h  dm_rs_surface_node.h  dm_virtual_screen_option.h  dms_global_mutex.h  dms_report.h  dms_reporter.h  dms_xcollie.h  draw_surface.h  event_tracker.h  ffrt_queue_helper.h  ffrt_serial_queue_helper.h  ffrt_timer.h  floating_ball_report.h  floating_view_report.h  focus_change_info.h  focus_notify_info.h  fold_screen_info.h  future.h  highlight_notify_info.h  load_mmi_client_adapter.h  marshalling_helper.h  noncopyable.h  perform_reporter.h  permission.h  persistent_storage.h  pip_report.h  pip_util.h  rate_limited_logger.h  rs_adapter.h  (+42 more)
utils/src/: accessibility_window_info.cpp  color_parser.cpp  (+59 more)
window_scene/: BUILD.gn
window_session/: BUILD.gn
wm/: BUILD.gn  libwm.map
wmserver/: BUILD.gn  IMockSessionManagerInterface.idl  libsms.map
wmtest/: BUILD.gn  README.en.md  README.md  ohos.build
(+2808 files in other folders)
