# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../windowmanager_aafwk.gni")

group("libdms_ext") {
  assert(
  target_platform != "null",
  "FATAL ERROR: device_type:'${target_platform}' cannot be 'null'. Please set value in part_config.json"
  )
  if (target_platform == "phone") {
    deps = [ "phone:libdm_extension" ]
  } else if (target_platform == "pc") {
      deps = [ "pc:libdm_extension" ]
  } else if (target_platform == "tablet") {
      deps = [ "tablet:libdm_extension" ]
  }
}

group("test") {
  testonly = true

  if (target_platform == "phone") {
    deps = [ "phone:test" ]
  } else if (target_platform == "pc") {
      deps = [ "pc:test" ]
  } else if (target_platform == "tablet") {
      deps = [ "tablet:test" ]
  }
}